# lila-black-analyser

./: .gitignore  ARCHITECTURE.md  INSIGHTS.md  Makefile  README.md  netlify.toml
.github/workflows/: ci.yml
data-pipeline/: README.md  pyproject.toml
data-pipeline/fixtures/: coord_cases.json
data-pipeline/src/pipeline/: __init__.py  cli.py  config.py  coords.py  enrich.py  export.py  ingest.py  pairing.py
data-pipeline/tests/: test_coords.py  test_enrich.py  test_pairing.py
docs/: ARCHITECTURE.md  DATA_ANOMALIES.md  DEPLOYMENT.md  SYSTEM_DESIGN.md
scripts/: verify_artifacts.py  verify_overlays.py
web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
web/public/data/: events_ambrose_valley.parquet  events_grand_rift.parquet  events_lockdown.parquet  manifest.json  matches_index.parquet  pairs_ambrose_valley.parquet  pairs_grand_rift.parquet  pairs_lockdown.parquet
web/src/: App.tsx  main.tsx
web/src/__tests__/: canvas.test.ts  coords.test.ts  killfeed.test.ts  traces.test.ts
web/src/components/killfeed/: KillFeedPanel.tsx
web/src/components/layout/: FilterSidebar.tsx  StatsPanel.tsx  Topbar.tsx
web/src/components/map/: MapCanvas.tsx  PlotlyCanvas.tsx  viewport.ts
web/src/components/map/traces/: heatmap.ts  (+4 more)
web/src/components/timeline/: TimeSlider.tsx
web/src/hooks/: useEvents.ts  useManifest.ts  useMatches.ts  usePairs.ts  useSelectedMatch.ts
web/src/lib/: coords.ts  duckdb.ts  mapConfig.ts  queries.ts  types.ts
web/src/state/: filterStore.ts
web/src/styles/: index.css
